K8S/alloy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: alloy
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: alloy
  template:
    metadata:
      labels:
        app: alloy
    spec:
      serviceAccountName: alloy
      containers:
        - name: alloy
          image: grafana/alloy:latest
          imagePullPolicy: Always
          args:
            - run
            - --server.http.listen-addr=0.0.0.0:12345
            - --storage.path=/var/lib/alloy/data
            - /etc/alloy/config.alloy
          ports:
            - containerPort: 12345
          volumeMounts:
            - name: alloy-config
              mountPath: /etc/alloy
            - name: alloy-storage
              mountPath: /var/lib/alloy/data
          readinessProbe:
            tcpSocket:
              port: 12345
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 12345
            initialDelaySeconds: 20
            periodSeconds: 10
      volumes:
        - name: alloy-config
          configMap:
            name: alloy-config
        - name: alloy-storage
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: alloy
  namespace: ecommerce
spec:
  selector:
    app: alloy
  ports:
    - port: 12345
      targetPort: 12345
