K8S/config-server.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-server
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config-server
  template:
    metadata:
      labels:
        app: config-server
    spec:
      containers:
        - name: config-server
          image: your-dockerhub-username/configserver:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8888
          volumeMounts:
            - name: native-config
              mountPath: /config
          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8888
            initialDelaySeconds: 20
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8888
            initialDelaySeconds: 40
            periodSeconds: 10
      volumes:
        - name: native-config
          configMap:
            name: config-server-native-config
---
apiVersion: v1
kind: Service
metadata:
  name: config-server
  namespace: ecommerce
spec:
  selector:
    app: config-server
  ports:
    - port: 8888
      targetPort: 8888
