K8S/loki-gateway.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loki-gateway
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loki-gateway
  template:
    metadata:
      labels:
        app: loki-gateway
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3100
          volumeMounts:
            - name: nginx-config
              mountPath: /etc/nginx/nginx.conf
              subPath: nginx.conf
          readinessProbe:
            tcpSocket:
              port: 3100
            initialDelaySeconds: 10
            periodSeconds: 5
          livenessProbe:
            tcpSocket:
              port: 3100
            initialDelaySeconds: 20
            periodSeconds: 10
      volumes:
        - name: nginx-config
          configMap:
            name: loki-nginx-config
---
apiVersion: v1
kind: Service
metadata:
  name: loki-gateway
  namespace: ecommerce
spec:
  selector:
    app: loki-gateway
  ports:
    - port: 3100
      targetPort: 3100
