K8S/loki-write.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: write
  namespace: ecommerce
spec:
  replicas: 1
  selector:
    matchLabels:
      app: write
      loki-part: loki
  template:
    metadata:
      labels:
        app: write
        loki-part: loki
    spec:
      containers:
        - name: loki-write
          image: grafana/loki:latest
          imagePullPolicy: IfNotPresent
          args:
            - "-config.file=/etc/loki/loki-config.yaml"
            - "-target=write"
          ports:
            - containerPort: 3100
            - containerPort: 7946
          volumeMounts:
            - name: loki-config
              mountPath: /etc/loki
            - name: loki-data
              mountPath: /loki
          readinessProbe:
            httpGet:
              path: /ready
              port: 3100
            initialDelaySeconds: 20
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /ready
              port: 3100
            initialDelaySeconds: 40
            periodSeconds: 15
      volumes:
        - name: loki-config
          configMap:
            name: loki-config
        - name: loki-data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: write
  namespace: ecommerce
spec:
  selector:
    app: write
  ports:
    - name: http
      port: 3100
      targetPort: 3100
    - name: gossip
      port: 7946
      targetPort: 7946
